--- a/src/views/page.ejs
+++ b/src/views/page.ejs
@@ -130,6 +130,8 @@
                     </ul>
 
                     <a class="button primary" href="/products">Browse Products</a>
+                    <!-- <a href="/products?collection=refillable">Shop Refillable Products</a> -->
+
                 </div>
 
                 <div class="mission-photo">
