changed images png to webp

--- a/src/views/page.ejs
+++ b/src/views/page.ejs
@@ -66,7 +66,7 @@
 
             <div class="hero-right">
                 <div class="hero-photo">
-                    <img src="/images/kitchenware.png" alt="Minimal sustainable home goods on a bright counter" onerror="this.src='/images/kitchenware.webp'" />
+                    <img src="/images/kitchenware.webp" alt="Minimal sustainable home goods on a bright counter" onerror="this.src='/images/kitchenware.webp'" />
                 </div>
             </div>
         </section>
@@ -81,7 +81,7 @@
     <div class="collections">
     <a class="collection-card" href="/products?collection=food-storage">
         <div class="circle">
-        <img src="/images/collection-storage.jpg" alt="Food storage" onerror="this.remove()">
+        <img src="/images/collection-storage.webp" alt="Food storage" onerror="this.remove()">
         </div>
         <h3>Food Storage</h3>
         <p>Glass containers, silicone bags, beeswax wraps.</p>
@@ -89,7 +89,7 @@
 
     <a class="collection-card" href="/products?collection=cooking-tools">
         <div class="circle">
-        <img src="/images/collection-tools.jpg" alt="Cooking tools" onerror="this.remove()">
+        <img src="/images/collection-tools.webp" alt="Cooking tools" onerror="this.remove()">
         </div>
         <h3>Cooking Tools</h3>
         <p>Cutting boards, wooden spoons, dish brushes, sponges.</p>
@@ -105,7 +105,7 @@
 
     <a class="collection-card" href="/products?collection=drinkware-on-the-go">
         <div class="circle">
-        <img src="/images/collection-drinkware.jpg" alt="Drinkware and on-the-go" onerror="this.remove()">
+        <img src="/images/collection-drinkware.webp" alt="Drinkware and on-the-go" onerror="this.remove()">
         </div>
         <h3>Drinkware & On-the-Go</h3>
         <p>Water bottles, lunch boxes, straws, coffee filters.</p>
@@ -134,7 +134,7 @@
                 </div>
 
                 <div class="mission-photo">
-                    <img src="/images/mission.jpg" alt="Bright neutral sustainable products styled neatly" onerror="this.src='/images/home.webp'" />
+                    <img src="/images/mission.webp" alt="Bright neutral sustainable products styled neatly" onerror="this.src='/images/home.webp'" />
                 </div>
             </div>
         </section>
