added a clickable links

--- a/src/views/page.ejs
+++ b/src/views/page.ejs
@@ -32,9 +32,9 @@
             </div>
 
             <div class="nav-actions">
-                <a class="nav-link" href="/login">Login</a>
-                <a class="button small" href="/register">Register</a>
-                <a class="icon-btn" href="/products" aria-label="Cart">
+                <a class="nav-link" href="#login">Login</a>
+                <a class="button small" href="#register">Register</a>
+                <a class="icon-btn" href="#products" aria-label="Cart">
           🛒
         </a>
             </div>
