modified the files and fixed the images

--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -31,7 +31,7 @@
     <% products.forEach(product => { %>
         <article class="product-card">
             <div class="product-img">
-                <img src="/images/home.webp" alt="<%= product.productName %>">
+                <img src="<%= product.imageUrl %>" alt="<%= product.productName %>">
             </div>
 
             <div class="product-info">
