--- a/src/views/product-detail.ejs
+++ b/src/views/product-detail.ejs
@@ -17,11 +17,12 @@
     <main class="container section">
         <div class="product-detail-layout">
             <div class="product-image-large">
-                <img src="/images/home.webp" alt="<%= product.productName %>">
+                <img src="<%= product.imageUrl %>" alt="<%= product.productName %>">
             </div>
             
             <div class="product-info-heavy">
                 <p class="eyebrow">Eco-Friendly Essentials</p>
+                <p class="tag"><%= product.category %></p>
                 <h1><%= product.productName %></h1>
                 <p class="price-large">$<%= product.price %></p>
                 
